goit-markup-hw-05

--- a/index.html
+++ b/index.html
@@ -167,49 +167,50 @@
                 <div class="team-social">
                   <ul class="team-social-list">
                     <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.instagram.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://x.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.facebook.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.linkedin.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                  </li>
+                      <a
+                        class="team-social-link"
+                        href="https://www.instagram.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://x.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.facebook.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.linkedin.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -227,49 +228,50 @@
                 <div class="team-social">
                   <ul class="team-social-list">
                     <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.instagram.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://x.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.facebook.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.linkedin.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                  </li>
+                      <a
+                        class="team-social-link"
+                        href="https://www.instagram.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://x.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.facebook.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.linkedin.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -287,49 +289,50 @@
                 <div class="team-social">
                   <ul class="team-social-list">
                     <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.instagram.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://x.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.facebook.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.linkedin.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                  </li>
+                      <a
+                        class="team-social-link"
+                        href="https://www.instagram.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://x.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.facebook.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.linkedin.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -347,49 +350,50 @@
                 <div class="team-social">
                   <ul class="team-social-list">
                     <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.instagram.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://x.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.facebook.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  </li>
-                  <li class="team-social-item">
-                  <a
-                    class="team-social-link"
-                    href="https://www.linkedin.com"
-                    target="_blank"
-                  >
-                    <svg class="team-social-icon" width="16" height="16">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                  </li>
+                      <a
+                        class="team-social-link"
+                        href="https://www.instagram.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://x.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.facebook.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-social-item">
+                      <a
+                        class="team-social-link"
+                        href="https://www.linkedin.com"
+                        target="_blank"
+                      >
+                        <svg class="team-social-icon" width="16" height="16">
+                          <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
@@ -458,7 +462,7 @@
           </p>
         </div>
         <div class="footer-social-container">
-          <h3 class="heading-sub">Social media</h3>
+          <p class="heading-sub">Social media</p>
           <div class="footer-social-list">
             <a
               class="footer-social-link"
@@ -495,13 +499,14 @@
           </div>
         </div>
         <div class="footer-subscribe-container">
-          <h3 class="heading-sub">Subscribe</h3>
+          <p class="heading-sub">Subscribe</p>
           <form class="subscribe-form">
-            <label class="subscribe-label" for="email-input">
+            <label class="subscribe-label" for="subscribe-email">
               <input
                 class="subscribe-input"
                 type="email"
-                name="email-input"
+                name="subscribe-email"
+                id="subscribe-email"
                 placeholder="E-mail"
               />
             </label>
@@ -532,6 +537,7 @@
               class="modal-form-input"
               type="text"
               name="name-input"
+              id="name-input"
               placeholder=""
             />
             <svg class="modal-form-icon" width="18" height="24">
@@ -544,6 +550,7 @@
               class="modal-form-input"
               type="tel"
               name="phone-input"
+              id="phone-input"
               placeholder=""
             />
             <svg class="modal-form-icon" width="18" height="24">
@@ -556,6 +563,7 @@
               class="modal-form-input"
               type="email"
               name="email-input"
+              id="email-input"
               placeholder=""
             />
             <svg class="modal-form-icon" width="18" height="24">
@@ -567,6 +575,7 @@
             <textarea
               class="modal-form-textarea"
               name="comment-input"
+              id="comment-input"
               placeholder="Text input"
               rows="6"
             ></textarea>
