--- a/portfolio.html
+++ b/portfolio.html
@@ -298,7 +298,7 @@
           </p>
         </div>
         <div class="footer-social-container">
-          <h3 class="heading-sub">Social media</h3>
+          <p class="heading-sub">Social media</p>
           <div class="footer-social-list">
             <a
               class="footer-social-link"
@@ -335,13 +335,14 @@
           </div>
         </div>
         <div class="footer-subscribe-container">
-          <h3 class="heading-sub">Subscribe</h3>
+          <p class="heading-sub">Subscribe</p>
           <form class="subscribe-form">
             <label class="subscribe-label" for="email-input">
               <input
                 class="subscribe-input"
                 type="email"
                 name="email-input"
+                id="email-input"
                 placeholder="E-mail"
               />
             </label>
